--- a/plugins/alt.1.0.0/alt-table.html
+++ b/plugins/alt.1.0.0/alt-table.html
@@ -1,5 +1,5 @@
 <script>
-    Vue.component('alt-table1', {
+    Vue.component('alt-table', {
         template: "<table><slot></slot></table>",
         props: {
             formCreate: Boolean,
