added rt2 column no hide function

--- a/plugins/alt.1.0.0/alt-rt2.html
+++ b/plugins/alt.1.0.0/alt-rt2.html
@@ -731,17 +731,19 @@
                 if (!this.responsive) return;
 
                 this.$nextTick(() => {
-                    console.log("--");
+                    //console.log("--");
                     var parentWidth = this.$refs.table.parentElement.offsetWidth;
-                    console.log("parentWidth", parentWidth);
+                    //console.log("parentWidth", parentWidth);
 
 
                     var total = () => {
                         let total = 0;
                         this.columns.forEach((c, i) => {
-                            if (c.hide) return;
                             let c_el = this.$refs.column[i];
-                            total += c_el.$el.offsetWidth;
+                            if (c_el) {
+                                total += c_el.$el.offsetWidth;
+                            }
+
                         });
                         if (this.columns.some((c) => {
                             return c.hide
@@ -763,9 +765,9 @@
                     };
 
                     var check = () => {
-                        var total = total();
-                        console.log(total);
-                        if (total > parentWidth) {
+                        let t = total();
+                        //console.log(t);
+                        if (t > parentWidth) {
                             hideLastColumn();
                             this.$nextTick(() => {
                                 check();
@@ -774,68 +776,9 @@
                     }
 
                     check();
-
-
-
-
-
-                    /*var check=()=>{
-                        this.$nextTick(()=>{
-                            if(this.$refs.table.offsetWidth > parentWidth){
-                                hideLastColumn();
-                            }
-                            check();
-                        });
-                    };*/
-
                 });
-
-                return;
-
-
-                this.$nextTick(function () {
-                    var parentWidth = this.$refs.table.parentElement.offsetWidth;
-                    //                    console.log("parentWidth width", parentWidth);
-
-                    var total = 0; //show 
-                    var hide_index = -1;
-                    var lastIndex = this.columns.length - 1;
-                    //                    console.log("last "+lastIndex);
-                    this.columns.forEach((c, i) => {
-                        if (hide_index >= 0) return;
-
-                        var c_el = this.$refs.column[i];
-                        var w = c_el.$el.offsetWidth;
-                        total += w;
-
-                        //                        console.log(total);
-                        if (i == lastIndex) {
-                            if (total > parentWidth) {
-                                hide_index = i;
-                                return;
-                            }
-                        } else {
-                            if (total + 32 > parentWidth) {
-                                hide_index = i;
-                                return;
-                            }
-                        }
-                    });
-
-                    //                    console.log(hide_index);
-                    if (hide_index >= 0) {
-                        this.columns.forEach((c, i) => {
-                            if (i >= hide_index) {
-                                c.hide = true;
-                            }
-                        });
-                    }
-                });
-
-
             }
         }
-
     });
 
 </script>
