--- a/plugins/alt.1.0.0/alt.html
+++ b/plugins/alt.1.0.0/alt.html
@@ -14,3 +14,4 @@
 <link rel="import" href="alt-xeditable.html">
 <link rel="import" href="alt-datatables.html">
 <link rel="import" href="alt-rt2.html">
+<link rel="import" href="alt-grid.html">
